# my-discord-bot

./: README.md  check_new_entries.py  pyproject.toml  rss_links.txt  sent_entries.db  sent_entries.json
.github/workflows/: rss.yml  typecheck.yml
src/my_discord_bot/: __init__.py  __main__.py
