[project]
name = "my-discord-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KOTARO SUTO" }
]
dependencies = [
    "feedparser>=6.0.11",
    "requests>=2.32.3",
    "duckdb>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"my-discord-bot" = "my_discord_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_discord_bot"]
