[project]
name = "my-discord-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KOTARO SUTO" }
]
dependencies = [
    "feedparser>=6.0.11",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"my-discord-bot" = "my_discord_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.53.0",
    "types-requests>=2.32.0",
]

[tool.pyrefly]
project-includes = ["src"]
search-path = ["src"]
python-version = "3.12"
ignore-missing-imports = ["feedparser", "feedparser.*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_discord_bot"]
